# beziercage

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  module.mod  module.txt  run_format.sh  run_tests.bat  run_tests.sh  run_tidy.sh  test.bat  test.sh  vcpkg.json
data/: README.md  USAGE.md  cage_plane_test.ma
modules/: FindMaya.cmake
scripts/: bezier.py
scripts/cage/: bezier_control.py  cage_creator.py  control.py  curve_from_view.py  menu.py
scripts/cage/control_definitions/: box.json
scripts/cage_creator/: bezier_control.py  cage_creator.py  cage_utils.py  control.py
scripts/jSmear/: menu.py
src/: CMakeLists.txt  cageCmd.cpp  cageCmd.hpp  cageControlNode.cpp  cageControlNode.hpp  cageCreator.py  cageDeformer.cpp  cageDeformer.hpp  cageMesh.cpp  cageMesh.hpp  cage_creation_context.py  common.cpp  common.h  common.hpp  jSmearCmd.cpp  jSmearCmd.h  jSmearCmd.hpp  jSmearDeformer.cpp  jSmearDeformer.h  jSmearDeformer.hpp  offsetCmd.cpp  offsetCmd.hpp  offsetPin.cpp  offsetPin.hpp  pluginMain.cpp
src/cageDeformer/: bind.cpp  bind.hpp  cageCmd.cpp  cageCmd.hpp  cageDeformer.cpp  cageDeformer.hpp
src/offsetPin/: offsetCmd.cpp  offsetCmd.hpp  offsetPin.cpp  offsetPin.hpp
tests/: decorators.py  run_tests.py  test_bezier_cage.py  test_cage_loading.py  test_jsmear_init.py  test_jsmear_loading.py  test_plugin_loading.py
